kustomize/limitless-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cpu-throttling-limitless
  namespace: k8s-platform
  labels:
    app.kubernetes.io/name: cpu-throttling-limitless
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cpu-throttling-limitless
  template:
    metadata:
      labels:
        app: cpu-throttling-limitless
    spec:
      #securityContext:
      #  runAsUser: 1000
      #  runAsGroup: 1000
      containers:
      - name: cpu-throttling-limitless
        image: eelkonio/k8s-cpu-throttling-demo:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
          protocol: TCP
        resources:
          requests:
            cpu: 100m
