kustomize/limitless-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cpu-throttling-limitless
  namespace: k8s-platform
spec:
  selector:
    app: cpu-throttling-limitless
  ports:
  - name: http
    protocol: "TCP"
    port: 80
    targetPort: 80
  type: ClusterIP
