kustomize/limitless-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cpu-throttling-limitless
  namespace: k8s-platform
spec:
  ingressClassName: nginx-platform
  rules:
  - host: cpu-throttling-limitless.yourdomain
    http:
      paths:
      - path: /
        pathType: ImplementationSpecific
        backend:
          service:
            name: cpu-throttling-limitless
            port:
              number: 80
